--- a/src/index.html
+++ b/src/index.html
@@ -39,21 +39,35 @@
         <div class="popup__content">
           <button type="button" class="popup__close"></button>
           <h3 class="popup__title">Редактировать профиль</h3>
-          <form class="popup__form" name="edit-profile">
+          <form class="popup__form" name="edit-profile" novalidate>
             <input
+              id="name-input"
               type="text"
               name="name"
               class="popup__input popup__input_type_name"
               placeholder="Имя"
               required
+              minlength="2"
+              maxlength="40"
+              pattern="^[а-яА-Яa-zA-ZёЁ\-\s]*$"
+              data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
             />
+            <span class="popup__input_error_text name-input-error"></span>
             <input
+              id="description-input"
               type="text"
               name="description"
               class="popup__input popup__input_type_description"
               placeholder="Занятие"
               required
+              minlength="2"
+              maxlength="200"
+              pattern="^[а-яА-Яa-zA-ZёЁ\-\s]*$"
+              data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
             />
+            <span
+              class="popup__input_error_text description-input-error"
+            ></span>
             <button type="submit" class="button popup__button">
               Сохранить
             </button>
@@ -64,21 +78,29 @@
         <div class="popup__content">
           <button type="button" class="popup__close"></button>
           <h3 class="popup__title">Новое место</h3>
-          <form class="popup__form" name="new-place">
+          <form class="popup__form" name="new-place" novalidate>
             <input
+              id="place-name"
               type="text"
               name="place-name"
               class="popup__input popup__input_type_card-name"
               placeholder="Название"
               required
+              minlength="2"
+              maxlength="30"
+              data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
+              pattern="^[а-яА-Яa-zA-ZёЁ\-\s]*$"
             />
+            <span class="popup__input_error_text place-name-error"></span>
             <input
+              id="link"
               type="url"
               name="link"
               class="popup__input popup__input_type_url"
               placeholder="Ссылка на картинку"
               required
             />
+            <span class="popup__input_error_text link-error"></span>
             <button type="submit" class="button popup__button">
               Сохранить
             </button>
@@ -92,15 +114,50 @@
           <p class="popup__caption"></p>
         </div>
       </div>
+      <div class="popup popup_type_agree">
+        <div class="popup__content popup__content-agree">
+          <button type="button" class="popup__close"></button>
+          <h3 class="popup__title">Вы уверены?</h3>
+          <button
+            type="submit"
+            class="button popup__button popup__agree-button"
+          >
+            Да
+          </button>
+        </div>
+      </div>
+      <div class="popup popup_type_avatar">
+        <div class="popup__content popup__content-avatar">
+          <button class="popup__close"></button>
+          <h3 class="popup__title">Обновить аватар</h3>
+          <form class="popup__form" name="avatar-link" novalidate>
+            <input
+              id="avatar_link"
+              type="url"
+              name="avatar_link"
+              class="popup__input popup__input_type_avatar"
+              placeholder="Ссылка на картинку"
+              minlength="2"
+              required
+            />
+            <span class="popup__input_error_text avatar_link-error"></span>
+            <button type="submit" class="button popup__button">
+              Сохранить
+            </button>
+          </form>
+        </div>
+      </div>
     </div>
-
     <template id="card-template">
       <li class="places__item card">
         <img class="card__image" src="" alt="" />
         <button type="button" class="card__delete-button"></button>
         <div class="card__description">
           <h2 class="card__title"></h2>
-          <button type="button" class="card__like-button"></button>
+          <div class="card__like">
+            <button type="button" class="card__like-button"></button>
+            <span class="card__like-count"></span>
+          </div>
         </div>
       </li>
     </template>
