--- a/src/index.html
+++ b/src/index.html
@@ -118,12 +118,14 @@
         <div class="popup__content popup__content-agree">
           <button type="button" class="popup__close"></button>
           <h3 class="popup__title">Вы уверены?</h3>
-          <button
-            type="submit"
-            class="button popup__button popup__agree-button"
-          >
-            Да
-          </button>
+          <form class="popup__form" name="agree" novalidate>
+            <button
+              type="submit"
+              class="button popup__button popup__agree-button"
+            >
+              Да
+            </button>
+          </form>
         </div>
       </div>
       <div class="popup popup_type_avatar">
